/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * Command sent by the Metering Point domain to the Charges domain requesting default charges to be linked to a new metering point.
 */
syntax = "proto3";

option csharp_namespace = "GreenEnergyHub.Charges.Infrastructure.Integration.LinkDefaultChargesReply";

message LinkDefaultChargesReplyContract {
  string correlation_id = 1;
  string process_id = 2; // Unique process id of the create metering point process.
  string command_id = 3;
  string metering_point_id = 4; // The metering point to link default charges to.
}